--- a/views/bucket_list.ejs
+++ b/views/bucket_list.ejs
@@ -15,13 +15,13 @@
         <a href="/"><img src="imgs/logo.png" alt="logo" id="logo"/></a>
         <a href="/login"><img src="imgs/login.png" alt="login" class="header_icon"/></a>
         <a href="/mandal"><img src="imgs/mandal_icon.png" alt="mandal" class="header_icon"/></a>
-        <a href="/calendar"><img src="imgs/calendar_icon.png" alt="calender" class="header_icon"/></a>
+        <a href="/calendar"><img src="imgs/calendar_icon.png" alt="calender" class="header_icon" id="calendar"/></a>
       </header>
     <section>
 
       <button type="button" id="delete" class="tableBtn">삭제</button>
       <button type="button" id="editList" class="tableBtn">완료</button>
-
+      
         <table border="1">
           <thead align="center">
             <tr>
