--- a/views/fullcalendar.ejs
+++ b/views/fullcalendar.ejs
@@ -32,6 +32,7 @@
 				<a href="/login"><img src="/imgs/login" class="nav"/></a>
 				<a href="/bucket"><img src="/imgs/bucket" class="nav"/></a>
 				<a href="/mandal"><img src="/imgs/mandal" class="nav"/></a>
+				<button class="sendClientEvents">제출</button>				
 			</header>
 		</div>
 
