--- a/public/css/bucket.css
+++ b/public/css/bucket.css
@@ -12,6 +12,10 @@
   float: right;
   margin-right: 5%;
 }
+
+#calendar{
+
+}
 section{
   clear: both;
   padding-top: 50px;
@@ -31,6 +35,12 @@ table{
 td{
   padding: 0 0 0 0;
 }
+
+.comp_check{
+  width: 100%;
+  height: 24px;
+}
+
 input{
   width: 99%;
   height: 99%;
