--- a/views/bucket_list.ejs
+++ b/views/bucket_list.ejs
@@ -15,17 +15,17 @@
         <a href="/"><img src="imgs/logo.png" alt="logo" id="logo"/></a>
         <a href="/login"><img src="imgs/login.png" alt="login" class="header_icon"/></a>
         <a href="/mandal"><img src="imgs/mandal_icon.png" alt="mandal" class="header_icon"/></a>
-        <a href="/calendar"><img src="imgs/calendar_icon.png" alt="calender" class="header_icon"/></a>
+        <a href="/calendar"><img src="imgs/calendar_icon.png" alt="calender" class="header_icon" id="calendar"/></a>
       </header>
     <section>
 
       <button type="button" id="delete" class="tableBtn">삭제</button>
       <button type="button" id="editList" class="tableBtn">완료</button>
-
+      
         <table border="1">
           <thead align="center">
             <tr>
-              <td colspan="3">
+              <td colspan="4">
                 Bucket List!
               </td>
             </tr>
@@ -35,10 +35,11 @@
               <td>순번</td>
               <td>내용</td>
               <td>목표 일자</td>
+              <td>목표 달성</td>
             </tr>
 
             <tr id="lastNode">
-              <td colspan="3" >
+              <td colspan="4" >
                 <input type="button" value="add Bucket" id="addList">
               </td>
             </tr>
