--- a/views/bucket_list.ejs
+++ b/views/bucket_list.ejs
@@ -5,17 +5,22 @@
     <title>bucket</title>
 
     <link rel="stylesheet" href="../css/bucket.css">
+    <link rel="stylesheet" href="../css/style.css">
     <script src="https://code.jquery.com/jquery-1.12.3.js"></script>
     <script src="https://code.jquery.com/jquery-1.12.3.min.js"></script>
     <script src="../js/bucket.js"></script>
 
     </head>
+    <div id="else-container">
+    
     <body>
       <header>
-        <a href="/"><img src="imgs/logo.png" alt="logo" id="logo"/></a>
-        <a href="/login"><img src="imgs/login.png" alt="login" class="header_icon"/></a>
-        <a href="/mandal"><img src="imgs/mandal_icon.png" alt="mandal" class="header_icon"/></a>
-        <a href="/calendar"><img src="imgs/calendar_icon.png" alt="calender" class="header_icon" id="calendar"/></a>
+        <div id="header-back">
+          <a href="/"><img src="imgs/logo.png" alt="logo" id="logo"/></a>
+          <a href="/login"><img src="imgs/login.png" alt="login" class="nav"/></a>
+          <a href="/mandal"><img src="imgs/mandal_icon.png" alt="mandal" class="nav"/></a>
+          <a href="/calendar"><img src="imgs/calendar_icon.png" alt="calender" class="nav" id="calendar"/></a>
+        </div>
       </header>
     <section>
 
@@ -47,5 +52,7 @@
     </table>
     </section>
     <footer></footer>
+    </div>
+    <div id="bg"></div>
   </body>
 </html>
