--- a/views/day_calendar.ejs
+++ b/views/day_calendar.ejs
@@ -13,7 +13,7 @@
         <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script> 
         
         
-        <link rel="stylesheet" type="text/css" href="day_calendar.css"/>
+        <link rel="stylesheet" type="text/css" href="/css/day_calendar.css"/>
     </head>
     
     <body>        
@@ -55,6 +55,6 @@
             </div>
         </div>  
 
-        <script src = "day_calendar.js"></script>
+        <script src = "/js/day_calendar.js"></script>
      </body>
 </html>
