디자인 통합

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,19 +6,24 @@
 
     <script src="/vendor/jquery-1.10.2.min.js"></script>
     <script src="/vendor/jquery-ui-1.10.2.custom.min.js"></script>
-   
+
     <link rel="stylesheet" href="css/login.css"/>
     <link rel="stylesheet" href="css/style.css">
   </head>
-  
+
   <body>
+    <div id="else-container">
+
     <header>
-      <a href="/"><img src="/imgs/logo.png" id="logo"/></a>
-      <a href="/bucket"><img src="/imgs/bucket_icon.png" class="nav"/></a>
-      <a href="/mandal"><img src="/imgs/mandal_icon.png" class="nav"/></a>
-      <a href="/calendar"><img src="/imgs/calendar_icon.png" class="nav"/></a>
-      <p class="user-email"></p>
+      <div id="header-back">
+        <a href="/"><img src="/imgs/logo.png" id="logo"/></a>
+        <a href="/bucket"><img src="/imgs/bucket_icon.png" class="nav"/></a>
+        <a href="/mandal"><img src="/imgs/mandal_icon.png" class="nav"/></a>
+        <a href="/calendar"><img src="/imgs/calendar_icon.png" class="nav"/></a>
+        <p class="user-email"></p>
+      </div>
     </header>
+
 
     <section>
       <div class="logged" id="log_form">
@@ -38,5 +43,7 @@
     <footer>
       <small>by- daidai</small>
     </footer>
+    </div>
+    <div id="bg"></div>
   </body>
 </html>
