mandal_make modify

--- a/views/mandal_main.ejs
+++ b/views/mandal_main.ejs
@@ -31,7 +31,7 @@
 <body>
 	<div id="else-container">
 		<header>
-			<div id="header-back"
+			<div id="header-back">
 					<a href="/"><img src="/imgs/logo" id="logo"/></a>
 					<a href="/login"><img src="/imgs/login" class="nav"/></a>
 					<a href="/bucket"><img src="/imgs/bucket" class="nav"/></a>
