--- a/public/css/mandal_make.css
+++ b/public/css/mandal_make.css
@@ -10,6 +10,15 @@
   padding-right: 5%;
 }
 
+#option{
+  margin-top : 200px;
+  width: 250px;
+  float: left;
+}
+section{
+  margin-top: 188px;
+}
+
 body{
   margin: 0px;
 }
