--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,12 +6,16 @@
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/style.css">
     <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.0.min.js" ></script>
+    <script type="text/javascript" src="js/index.js"></script>
     <title>만다라트</title>
   </head>
   <body>
+    <div id="else-container">
     <header>
+      <div id="header-back">
         <a href="/"><img src="/imgs/logo" id="logo"/></a>
         <a href="/login"><img src="/imgs/login" id="login"/></a>
+        </div>
     </header>
 
     <section>
@@ -29,5 +33,9 @@
     <footer>
       <small>by- daidai</small>
     </footer>
+    </div>
+    <div id="bg">
+
+    </div>
   </body>
 </html>
