--- a/views/mandal_main.ejs
+++ b/views/mandal_main.ejs
@@ -1,19 +1,26 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Hello</title>
+	<title>MandalArt</title>
 
 	<script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
     <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 
+	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
 	<script src="/js/mandal_main.js"></script>
-	<script src = '/vendor/bootstrap.min.js'></script>
-	<script src = '/vendor/modal.js'></script>
 	<script src="/js/vendor/jquery.zoomooz.min.js"></script>
 
-	<link rel="stylesheet" href="https://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
 	<link rel="stylesheet" type="text/css" href="/css/mandal_main.css">
 	<link rel="stylesheet" type="text/css" href="/css/style.css">
+<!--
+	<link href = "/css/bootstrap.min.css" rel="stylesheet" media="screen">
+
+	<script src = '/vendor/bootstrap.min.js'></script>
+-->	<script src = '/vendor/modal.js'></script>
+	<link href='/css/modals.less' rel = 'stylesheet' type = 'text/css'>
 
 	<script type='text/javascript'>
 		$(document).ready(function() {
@@ -43,6 +50,7 @@
 			<div class="formContainer">
 				<form action="/mandal/main" method="POST" class="mandalForm">
 					<div class='zoomViewport'>
+						<div id="top"></div>
 						<div class='zoomContainer' id='mandal-container'>
 								<div class='mandal-top' id='mandal1'>
 									<table class="mandal-table">
@@ -256,21 +264,23 @@
 
 		</footer>
 	</div>
-	<button class="btn btn-default" id="popbutton">모달출력버튼</button>
-	<div class="modal fade" id="view_event">
+
+	<div class="modal fade" id="addMandal">
 		<div class="modal-dialog">
 			<div class="modal-content">
 				<div class="modal-header">
-					<button type = "button" class = "close" data-dismiss = "modal" aria-hidden = "true">&times;</button>
-					<h4 class="modal-title" id="event_title">일정</h4>
+					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+					<h4 class="modal-title">만다라트</h4>
 				</div>
 				<div class="modal-body">
-					<p><input type = "text" id = "changetitle" class = "span10"></p>
+					<p>
+						<label>내용 입력</label><br/>
+						<input type = "text" id = "modal-article" class = "span10">
+					</p>
 				</div>
 				<div class="modal-footer">
-					<button type = "button" class = "btn btn-danger" data-option = "remove" id = "remove">remove</button>
-					<button type = "button" class = "btn btn-primary" data-option = "edit" id = "edit">edit</button>
-					<button type= " button" class = "btn btn-default" data-dismiss = "modal">Close</button>
+					<button type = "button" class="btn btn-primary" data-option="add" id="add-modal">추가</button>
+					<button type = "button" class="btn btn-default" data-dismiss="modal" id="modal-cancle">취소</button>
 				</div>
 			</div>
 		</div>
