--- a/views/mandal_main.ejs
+++ b/views/mandal_main.ejs
@@ -286,6 +286,27 @@
 		</div>
 	</div>
 
+	<div class="modal fade" id="myModal">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+					<h4 class="modal-title">만다라트</h4>
+				</div>
+				<div class="modal-body">
+					<p>
+						<label>내용 입력</label><br/>
+						<input type = "text" id = "modal-article" class = "span10">
+					</p>
+				</div>
+				<div class="modal-footer">
+					<button type = "button" class="btn btn-primary" data-option="add" id="add-modal">추가</button>
+					<button type = "button" class="btn btn-default" data-dismiss="modal" id="modal-cancle">취소</button>
+				</div>
+			</div>
+		</div>
+	</div>
+
 	<div id="bg"></div>
 </body>
 </html>
