--- a/public/css/index.css
+++ b/public/css/index.css
@@ -73,6 +73,39 @@ body{
     /*box-shadow: inset 0 5px 10px rgba(0,0,0,.075);*/
 }
 
+.fg{
+  margin-top:4px;
+  width:218px;
+}
+
+#devider{
+  width: 440px;
+  min-width:440px;
+  height: 20px;
+  margin:auto;
+}
+#devider>ul{
+  width:440px;
+  margin:0;
+}
+#devider>ul>li{
+  padding:0;
+  height:1px;
+}
+#devider>ul>li>hr{
+  margin:0px ;
+}
+#or{
+  font-family: 'NanumGothic';
+  color:#ffffff;
+  text-shadow : 0 1px 4px rgba(0,0,0,0.33);
+}
+
+#div-exbutton{
+  width: 440px;
+  margin:auto
+}
+
 .form-control {
     background-color: #FFFFFF;
     border: 1px solid #E3E3E3;
