--- a/views/fullcalendar.ejs
+++ b/views/fullcalendar.ejs
@@ -19,9 +19,9 @@
 	<script src = '/vendor/bootstrap.min.js'></script>
 	<script src = '/vendor/modal.js'></script>
 	<link href='/css/modals.less' rel = 'stylesheet' type = 'text/less'>
-	
+
 	<!--FullCalendar-->
-	
+
 	<link href='/css/fullcalendar.css' rel='stylesheet' type="text/css">
 	<link href='/css/fullcalendar.print.css' rel='stylesheet' media='print' type="text/css">
 
@@ -43,19 +43,34 @@
 				<% include ./day_calendar.ejs %>
 			});
 		});
-	</script>-->	
+	</script>-->
 </head>
 <body>
     <div id="else-container">
-		<div id="header-back">
 			<header>
-				<a href="/"><img src="/imgs/logo" id="logo"/></a>
-				<a href="/login"><img src="/imgs/login" class="nav"/></a>
-				<a href="/bucket"><img src="/imgs/bucket" class="nav"/></a>
-				<a href="/mandal"><img src="/imgs/mandal" class="nav"/></a>
-				<button class="sendClientEvents">제출</button>				
+				<nav class ="navbar navbar-transparent navbar-fixed-top" role="navigation">
+        <div class="container">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-target">
+              <span class="sr-only">navigation of toggle</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+          </div>
+        <div id="navbar-target" class="navbar-collapse in">
+          <ul id="navbar-logo" class="nav navbar-nav navbar-left">
+            <li><a href="/"><img src="/imgs/logo" class="index_nav"/></a></li>
+          </ul>
+        <!-- <li><a href="/login"><img src="/imgs/login" id="login"/></a><li/> -->
+          <ul id="navbar" class="nav navbar-nav navbar-right">
+            <li><a href="/bucket"><img src="/imgs/bucket" class="index_nav"/></a></li>
+            <li><a href="/mandal"><img src="/imgs/mandal" class="index_nav"/></a></li>
+          </ul>
+        </div>
+     </div>
+     </nav>
 			</header>
-		</div>
 
 		<!--FullCalendar container div-->
 		<div id='calendar'>
@@ -110,9 +125,10 @@
 						</div>
 					</div>
 				</div>
-			</div>	
+			</div>
 		</div>
 	</div>
-    <div id="bg"></div>
+  <div id="black-cover"></div>
+  <div id="bg"></div>
 </body>
 </html>
