--- a/views/index.ejs
+++ b/views/index.ejs
@@ -44,20 +44,31 @@
       <div class="subscribe">
         <!-- <div class="row"> -->
           <div id="form-container" class="col-md-4 col-md-offset-4 col-sm6-6 col-sm-offset-3">
-            <form action="" class="form-inline form-login" role="form">
+            <form action="/login" class="form-inline form-login" role="form">
               <div class="form-group">
                 <!-- <label class="sr-only" for="">로그인</label> -->
                 <div class="input-group">
                   <label for="login_id" class="fa fa-user"></label>
-                  <input type="text" id="login_id" class="form-control transparent" placeholder="아이디">
+                  <input type="email" name="email" id="login_id" class="form-control transparent" placeholder="아이디">
                 </div>
                 <div class="input-group">
                   <label for="login_password" class="fa fa-lock"></label>
-                  <input type="password" id="login_password" class="form-control transparent" placeholder="비밀번호">
+                  <input type="password" name="password" id="login_password" class="form-control transparent" placeholder="비밀번호">
                 </div>
               </div>
               <div id="div-button">
                 <button id="login" type="submit" class="btn btn-danger btn-fill">로그인</button>
+              </div>
+              <div id="devider">
+                <ul class="list-unstyled list-inline">
+                  <li><hr style="width:155px;"></li>
+                  <li><span id="or">or</span></li>
+                  <li><hr style="width:155px;"></li>
+                </ul>
+              </div>
+              <div id="div-exbutton">
+                <button id="facebook" type="submit" class="btn btn-primary btn-fill fg fa fa-facebook"></button>
+                <button id="google" type="submit" class="btn btn-danger btn-fill fg fa fa-google-plus"></button>
               </div>
             </form>
           </div>
