--- a/views/index_session.ejs
+++ b/views/index_session.ejs
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html>
-
   <head>
     <meta charset="utf-8">
-
-    <link rel="stylesheet" href="/css/mandal_make.css">
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
-    <link rel="stylesheet" href="/css/mandal_main.css">
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-
-    <script src="vendor/jquery-1.10.2.min.js"></script>
-    <script src="vendor/jquery-ui-1.10.2.custom.min.js"></script>
-    <script src="js/mandalmake.js"></script>
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.0.min.js" ></script>
+    <script type="text/javascript" src="js/index.js"></script>
     <script type="text/javascript" src="js/vendor/bootstrap.min.js"></script>
-
     <title>만다라트</title>
-  </head>
+    <script type='text/javascript'>
+      $(document).ready(function() {
+        var userId = $.parseJSON('<%- JSON.stringify(user) %>');
 
+        if (userId) {
+          $("#welcome").text(userId + "님 환영합니다");
+        }
+      });
+	</script>
+  </head>
   <body>
     <div id="else-container">
-
     <header>
       <nav class ="navbar navbar-transparent navbar-fixed-top" role="navigation">
         <div class="container">
@@ -38,7 +40,7 @@
         <!-- <li><a href="/login"><img src="/imgs/login" id="login"/></a><li/> -->
           <ul id="navbar" class="nav navbar-nav navbar-right">
             <li><a href="/bucket"><img src="/imgs/bucket" class="index_nav"/></a></li>
-            <!-- <li><a href="/mandal"><img src="/imgs/mandal" class="index_nav"/></a></li> -->
+            <li><a href="/mandal"><img src="/imgs/mandal" class="index_nav"/></a></li>
             <li><a href="/calendar"><img src="/imgs/calendar" class="index_nav"/></a></li>
           </ul>
         </div>
@@ -46,28 +48,32 @@
      </nav>
     </header>
 
-    <div id = 'option'>
-      <img src="imgs/plus.png" id="addbtn"/>
-        <ul id="mandal_slide">
-          <li><a href="/mandal_template"><img src="imgs/select_circle.png" class="selector" id="circle"/></a></li>
-          <li><img src="imgs/select_triangle.png" class="selector" id="triangle"/></li>
-          <li><a href="/mandal/main"><img src="imgs/select_square.png" class="selector" id="square"/></a></li>
-          <li><a href="../login">아스아스아으</a></li>
-        </ul>
-    </div>
 
-<!-- 게시물의 개수를 받아 for문을 돌려 이미지를 출력해준다. -->
-    <section>
-      <div class="preview"></div>
-      <div class="preview"></div>
-      <div class="preview"></div>
-    </section>
+    <div class="content">
+      <div class="subscribe">
+        <!-- <div class="row"> -->
+          <div id="form-container" class="col-md-4 col-md-offset-4 col-sm6-6 col-sm-offset-3">
+            <div class="logged" id="log_form">
+                <p id="welcome"></p>
+                <a href="/logout">
+                    <button id="logout">로그아웃</button>
+                </a>
+            </div>
+          </div>
+        <!-- </div> -->
+      </div>
+      </div>
+      <div class="wise">
+        <h4 id="wise">
+          '미래를 예측하는 방법은 미래를 창조하는 것이다.'
+        </h4>
+      </div>
 
     <footer>
-
+      <small>by- daidai</small>
     </footer>
     </div>
     <div id="black-cover"></div>
-    <div id="bg"></div>
+    <div id="bg">
   </body>
 </html>
