--- a/views/mandal_main.ejs
+++ b/views/mandal_main.ejs
@@ -5,17 +5,17 @@
 
 	<script src="/vendor/jquery-1.10.2.min.js"></script>
 	<script src="/vendor/jquery-ui.js"></script>
-	
+
 	<script src="/vendor/bootstrap.min.js"></script>
 	<link rel="stylesheet" href="/css/bootstrap.min.css">
-	
+
 
 	<script src="/js/mandal_main.js"></script>
 	<script src="/js/vendor/jquery.zoomooz.min.js"></script>
 
 	<link rel="stylesheet" type="text/css" href="/css/mandal_main.css">
 	<link rel="stylesheet" type="text/css" href="/css/style.css">
-	
+
 	<script src = '/vendor/modal.js'></script>
 	<link href='/css/modals.less' rel='stylesheet' type='text/css'>
 
@@ -36,12 +36,29 @@
 <body>
 	<div id="else-container">
 		<header>
-			<div id="header-back">
-					<a href="/"><img src="/imgs/logo" id="logo"/></a>
-					<a href="/login"><img src="/imgs/login" class="nav"/></a>
-					<a href="/bucket"><img src="/imgs/bucket" class="nav"/></a>
-					<a href="/calendar"><img src="/imgs/calendar" class="nav"/></a>
-			</div>
+			<nav class ="navbar navbar-transparent navbar-fixed-top" role="navigation">
+        <div class="container">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-target">
+              <span class="sr-only">navigation of toggle</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+          </div>
+        <div id="navbar-target" class="navbar-collapse in">
+          <ul id="navbar-logo" class="nav navbar-nav navbar-left">
+            <li><a href="/"><img src="/imgs/logo" class="index_nav"/></a></li>
+          </ul>
+        <!-- <li><a href="/login"><img src="/imgs/login" id="login"/></a><li/> -->
+          <ul id="navbar" class="nav navbar-nav navbar-right">
+            <li><a href="/bucket"><img src="/imgs/bucket" class="index_nav"/></a></li>
+            <li><a href="/mandal"><img src="/imgs/mandal" class="index_nav"/></a></li>
+            <li><a href="/calendar"><img src="/imgs/calendar" class="index_nav"/></a></li>
+          </ul>
+        </div>
+     </div>
+     </nav>
 		</header>
 		<section>
 			<div class="formContainer">
@@ -303,7 +320,7 @@
 			</div>
 		</div>
 	</div>
-
+	<div id="black-cover"></div>
 	<div id="bg"></div>
 </body>
 </html>
