--- a/views/fullcalendar.ejs
+++ b/views/fullcalendar.ejs
@@ -37,6 +37,9 @@
 	<link rel="stylesheet" type="text/css" href="/css/day_calendar.css"/>
 	<link rel="stylesheet" type="text/css" href="/js/day_calendar.js"/>
 
+  <script type="text/javascript" src="js/nav.js"></script>
+
+
 	<!--<script type='text/javascript'>
 		$(document).ready(function() {
 			$(".fc-button-agendaDay").on('click', function() {
@@ -48,7 +51,7 @@
 <body>
     <div id="else-container">
 			<header>
-				<nav class ="navbar navbar-transparent navbar-fixed-top" role="navigation">
+				<nav id="navupdown" class ="navbar navbar-transparent navbar-fixed-top" role="navigation">
         <div class="container">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-target">
