--- a/public/css/index.css
+++ b/public/css/index.css
@@ -73,9 +73,16 @@ body{
     /*box-shadow: inset 0 5px 10px rgba(0,0,0,.075);*/
 }
 
+
+
 .fg{
   margin-top:4px;
   width:218px;
+}
+
+.wrapper input[type="button"] {
+    position: relative;
+    font-family: 'FontAwesome';
 }
 
 #devider{
