--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,13 @@
+/****************jselement****************/
+.nav-up{
+  top: -90px !important;
+  transition: 0.5s;
+}
+/*****************************************/
+#header{
+  position: fixed;
+}
+
 @media (max-width: 768px){
     .navbar-transparent{
         padding-top: 0px;
