--- a/views/bucket_list.ejs
+++ b/views/bucket_list.ejs
@@ -11,6 +11,7 @@
     <script src="http://code.jquery.com/ui/1.11.1/jquery-ui.min.js"></script>
     <script src="../js/bucket.js"></script>
     <script type="text/javascript" src="js/vendor/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/nav.js"></script>
 
     </head>
     <div id="else-container">
@@ -18,7 +19,7 @@
     <body>
       <header>
         <div id="header-back">
-          <nav class ="navbar navbar-transparent navbar-fixed-top" role="navigation">
+          <nav id="navupdown" class ="navbar navbar-transparent navbar-fixed-top" role="navigation">
             <div class="container">
               <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-target">
