--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,13 +8,14 @@
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.0.min.js" ></script>
     <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="js/nav.js"></script>
     <script type="text/javascript" src="js/vendor/bootstrap.min.js"></script>
     <title>만다라트</title>
   </head>
   <body>
     <div id="else-container">
     <header>
-      <nav class ="navbar navbar-transparent navbar-fixed-top" role="navigation">
+      <nav id="navupdown" class ="navbar navbar-transparent navbar-fixed-top" role="navigation">
         <div class="container">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-target">
@@ -67,8 +68,12 @@
                 </ul>
               </div>
               <div id="div-exbutton">
-                <button id="facebook" type="submit" class="btn btn-primary btn-fill fg fa fa-facebook"></button>
-                <button id="google" type="submit" class="btn btn-danger btn-fill fg fa fa-google-plus"></button>
+                <div style="width:218px; margin:0;float:right" class="wrapper">
+                <input type="button" id="google" class="btn btn-danger btn-fill fg fa fa-google-plus" onclick="location.href='/auth/google'" value="&#xf0d5">
+                </div>
+                <div style="width:218px; marign:0;" class="wrapper">
+                  <input type="button" id="facebook" class="btn btn-primary btn-fill fg fa fa-facebook" onclick="location.href='/auth/facebook'" value="&#xf09a">
+                </div>
               </div>
             </form>
           </div>
