--- a/views/index_session.ejs
+++ b/views/index_session.ejs
@@ -4,10 +4,13 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/index_session.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
+    <script type="text/javascript" src="../routes/nav.js"></script>
     <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.0.min.js" ></script>
     <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="js/nav.js"></script>
     <script type="text/javascript" src="js/vendor/bootstrap.min.js"></script>
     <title>만다라트</title>
     <script type='text/javascript'>
@@ -22,8 +25,8 @@
   </head>
   <body>
     <div id="else-container">
-    <header>
-      <nav class ="navbar navbar-transparent navbar-fixed-top" role="navigation">
+    <header id="header">
+      <nav id="navupdown" class ="navbar navbar-transparent navbar-fixed-top" role="navigation">
         <div class="container">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-target">
@@ -56,7 +59,7 @@
             <div class="logged" id="log_form">
                 <p id="welcome"></p>
                 <a href="/logout">
-                    <button id="logout">로그아웃</button>
+                    <button id="logout" class="btn btn-danger">로그아웃</button>
                 </a>
             </div>
           </div>
