--- a/views/mandal_main.ejs
+++ b/views/mandal_main.ejs
@@ -19,16 +19,38 @@
 	<script src = '/vendor/modal.js'></script>
 	<link href='/css/modals.less' rel='stylesheet' type='text/css'>
 
+	<script type="text/javascript" src="/js/nav.js"></script>
+
 	<script type='text/javascript'>
 		$(document).ready(function() {
-			$('#sendData').on('click', function() {
-				var mandalData = jQuery.parseJSON('<%- JSON.stringify(jsonObj) %>');
+			var mandalCenterData = JSON.parse(<%- JSON.stringify(center) %>);
+			var mandalData = JSON.parse(<%- JSON.stringify(mandal) %>);
 
-				$('.table-article').each(function(index) {
-					$(this).children('.text-field').text(mandalData[index])
-					.next('.hidden-field').val(mandalData[index]);
+			if (mandalCenterData) {
+				$.each($(".subGoal"), function(index, value) {
+					$(this)
+					.children(".text-field").text(mandalCenterData[index].mandal_ultimate_Sub_goal)
+					.next(".hidden-field").val(mandalCenterData[index].mandal_ultimate_Sub_goal);
 				});
-			});
+
+				$(".ultimateGoal")
+				.children(".text-field").text(mandalCenterData[8].mandal_ultimate_Sub_goal)
+				.next(".hidden-field").val(mandalCenterData[8].mandal_ultimate_Sub_goal);
+
+				$.each($(".falseSub"), function(index, value) {
+					$(this)
+					.children(".text-field").text(mandalCenterData[index].mandal_ultimate_Sub_goal)
+					.next(".hidden-field").val(mandalCenterData[index].mandal_ultimate_Sub_goal);
+				});
+			}
+
+			if (mandalData) {
+				$.each($(".detailGoal"), function(index, value) {
+					$(this)
+					.children(".text-field").text(mandalData[index].mandal_detail_content)
+					.next(".hidden-field").val(mandalData[index].mandal_detail_content);
+				});
+			}
 		});
 	</script>
 </head>
@@ -36,7 +58,7 @@
 <body>
 	<div id="else-container">
 		<header>
-			<nav class ="navbar navbar-transparent navbar-fixed-top" role="navigation">
+			<nav id="navupdown" class ="navbar navbar-transparent navbar-fixed-top" role="navigation">
         <div class="container">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-target">
@@ -268,8 +290,8 @@
 						</div>
 					</div>
 
-					<input type="button" value='Get From Server' id='sendData'>
-					<input type="submit" value="Send To Server" id='getData'>
+					<input type="button" class="ts btn btn-danger" value='테스트' id='sendData'>
+					<input type="submit" class="ts btn btn-danger" value="저장" id='getData'>
 				</form>
 			</div>
 		</section>
