--- a/views/index_session.ejs
+++ b/views/index_session.ejs
@@ -2,13 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <script src="/vendor/jquery-1.10.2.min.js"></script>
+    <script src="/vendor/jquery-ui.js"></script>
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/index_session.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
-    <script type="text/javascript" src="../routes/nav.js"></script>
-    <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.0.min.js" ></script>
+    <script type="text/javascript" src="js/nav.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
     <script type="text/javascript" src="js/nav.js"></script>
     <script type="text/javascript" src="js/vendor/bootstrap.min.js"></script>
