--- a/public/css/style.css
+++ b/public/css/style.css
@@ -45,8 +45,8 @@
 
 @font-face{
 font-family: 'NanumGothic';
-src: url('css/NanumBarunGothic.eot')format('eot');
-src: url('css/NanumBarunGothic.woff') format('woff');
+src: url('/css/NanumBarunGothic.eot')format('eot');
+src: url('/css/NanumBarunGothic.woff')format('woff');
 }
 
 .navbar-fixed-top .navbar-collapse{
