--- a/public/css/index.css
+++ b/public/css/index.css
@@ -31,6 +31,7 @@ body{
   }
   #login{
     margin: 0;
+    height:
   }
   .form-group{
     width:auto !important;
@@ -50,8 +51,10 @@ body{
 }
 
 #login{
+  margin-top:5px;
   width: 440px;
-  height: 40px;
+  height: 30px;
+  text-align: center;
 }
 .input-group label{
   border-top-left-radius: 4px;
@@ -106,6 +109,13 @@ body{
   font-family: 'NanumGothic';
   color:#ffffff;
   text-shadow : 0 1px 4px rgba(0,0,0,0.33);
+}
+#sign-up{
+  margin-top:5px;
+  border: none;
+  background-color: #4ABA51;
+  height: 25px;
+  width:440px;
 }
 
 #div-exbutton{
@@ -164,6 +174,91 @@ body{
     opacity: 1;
 }
 
+#join-title{
+  color: #87613d;
+}
+
+.modal-title{
+  color: white;
+}
+.modal-header{
+  border-bottom: 0 !important;
+}
+
+#layerpop input::-webkit-input-placeholder { /* WebKit, Blink, Edge */
+    /*color:     #E3392B;*/
+    color: white;
+}
+#layerpop input:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+   /*color:     #E3392B;*/
+   color: white;
+   opacity:  1;
+}
+#layerpop input::-moz-placeholder { /* Mozilla Firefox 19+ */
+   /*color:     #E3392B;*/
+   color: white;
+   opacity:  1;
+}
+#layerpop input:-ms-input-placeholder { /* Internet Explorer 10-11 */
+   /*color:     #E3392B;*/
+   color: white;
+}
+
+#layerpop>.modal-dialog{
+  width: 350px;
+  height: auto;
+  padding-top:100px;
+}
+#layerpop .modal-content{
+  height: inherit;
+  background-color:#2B2D42;
+}
+#siba{
+  background: url(/imgs/background.jpg);
+  background-size:cover;
+  border: 3px solid #EDF2F4;
+  width: 7em;
+  height: 7em;
+  margin: 0 auto;
+  -webkit-transform: translateY(-30px);
+  transform: translateY(-50px);
+  border-radius: 100%;
+}
+.signup-inner{
+  border-bottom: 1px solid #504d4d;
+}
+.modal-body{
+  padding-left: 0 !important;
+  padding-right: 0 !important;
+  padding-bottom: 0 !important;
+  text-align:center;
+}
+.modal-footer{
+  border-top: 0 !important;
+}
+#modal_sivbal{
+  margin-top: 55px;
+  border-bottom: none;
+  background-color: #e19851
+}
+#layerpop input{
+  color: white;
+  width: 344px !important;
+  background-color: rgba(0,0,0,0);
+  box-shadow:none;
+  border: none;
+  /*border-bottom: 2px solid white;*/
+  border-radius:0px;
+  /*text-align: center;*/
+  font-size: 15px;
+  font-weight: 500;
+  font-family: 'NanumGothic';
+  margin-top:5px;
+}
+#layerpop label{
+  color: white !important;
+  font-family: 'NanumGothic';
+}
 /*****************************************/
 
 /*****************footer*****************/
