--- a/views/fullcalendar.ejs
+++ b/views/fullcalendar.ejs
@@ -12,10 +12,11 @@
 	<script src='/vendor/jquery-1.10.2.min.js'></script>
 	<script src='/vendor/jquery-ui-1.10.2.custom.min.js'></script>
 	<script src = '/js/calendar.js'></script>
+	
 
 	<!-- Bootstrap-->
 	<link href = "/css/bootstrap.min.css" rel="stylesheet" media="screen">
-
+  <script src="//d3js.org/d3.v3.min.js"></script>
 	<script src = '/vendor/bootstrap.min.js'></script>
 	<script src = '/vendor/modal.js'></script>
 	<link href='/css/modals.less' rel = 'stylesheet' type = 'text/less'>
@@ -28,14 +29,12 @@
 	<script src='/vendor/moment.min.js'></script>
 	<script src='/vendor/jquery-ui.js'></script>
 	<script src='/vendor/fullcalendar.js'></script>
-	<!--<script src='/vendor/lang-all.js'></script>-->
+
+	<link rel="stylesheet" type="text/css" href="/css/day_calendar.css"/>
+    <script type="text/javascript" src ="/js/day_calendar.js"></script>
 
 	<script src = '/vendor/modal.js'></script>
 	<link href='/css/modals.less' rel='stylesheet' type='text/css'>
-
-
-	<link rel="stylesheet" type="text/css" href="/css/day_calendar.css"/>
-	<link rel="stylesheet" type="text/css" href="/js/day_calendar.js"/>
 
   <script type="text/javascript" src="js/nav.js"></script>
 
@@ -75,12 +74,11 @@
      </nav>
 			</header>
 
-		<!--FullCalendar container div-->
-		<div id='calendar'>
+<div id='calendar'>
 			<div id='hide-scrollbar'>
 				<div id='calendar-inner'>
-
-					<div class="modal fade" id="view_eventadd">
+ 
+					<div class="modal fade" id="addModal">
 						<div class="modal-dialog">
 							<div class="modal-content">
 								<div class="modal-header">
@@ -89,24 +87,24 @@
 								</div>
 								<div class="modal-body">
 									<p>
-										<label>Event title</label><br/>
-										<input type = "text" id = "title" class = "span10">
+										<label>일정 이름</label><br/>
+										<input type = "text" id = "addTitle" class = "span10" maxlength="10">
 									</p>
-
+ 
 									<!--<p>
 										<label>Day</label><br/>
 										<input type = "text" id = "day" class = "span10">
 									</p>-->
 								</div>
 								<div class="modal-footer">
-									<button type = "button" class="btn btn-primary" data-option="add" id="add">add</button>
-									<button type = "button" class="btn btn-default" data-dismiss="modal">Close</button>
+									<button type = "button" class="btn btn-primary" data-option="add" id="add">추가</button>
+									<!-- <button type = "button" class="btn btn-default" data-dismiss="modal">Close</button> -->
 								</div>
 							</div>
 						</div>
 					</div>
-
-					<div class="modal fade" id="view_event">
+ 
+					<div class="modal fade" id="editModal">
 						<div class="modal-dialog">
 							<div class="modal-content">
 								<div class="modal-header">
@@ -115,14 +113,15 @@
 								</div>
 								<div class="modal-body">
 									<p>
-										<label>Event title</label><br/>
-										<input type = "text" id = "changetitle" class = "span10">
+										<label>일정 이름</label><br/>
+										<input type = "text" id = "editTitle" class = "span10" maxlength="10">
 									</p>
 								</div>
 								<div class="modal-footer">
-									<button type = "button" class = "btn btn-danger" data-option = "remove" id = "remove">remove</button>
-									<button type = "button" class = "btn btn-primary" data-option = "edit" id = "edit">edit</button>
-									<button type= " button" class = "btn btn-default" data-dismiss = "modal">Close</button>
+									<button type = "button" class = "btn btn-danger" data-dismiss = "modal" id = "remove">삭제</button>
+									<!--button type = "button" class = "btn btn-primary" data-option = "detail" id = "detail">detail</button
+									자세히 모달 추가해야함-->
+									<button type = "button" class = "btn btn-primary" data-dismiss="modal" id = "save">수정</button>
 								</div>
 							</div>
 						</div>
@@ -130,6 +129,7 @@
 				</div>
 			</div>
 		</div>
+
 	</div>
   <div id="black-cover"></div>
   <div id="bg"></div>
