--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,15 @@
     <script type="text/javascript" src="js/nav.js"></script>
     <script type="text/javascript" src="js/vendor/bootstrap.min.js"></script>
     <title>만다라트</title>
+    <!--<script>
+      var message = JSON.parse(<%- JSON.stringify(message) %>);
+
+      if (message) 
+        $("#form-container").append('<h1>' + message[0] + '</h1>');
+    </script>-->
+
   </head>
+  
   <body>
     <div id="else-container">
     <header>
@@ -46,9 +54,8 @@
       <div class="subscribe">
         <!-- <div class="row"> -->
           <div id="form-container" class="col-md-4 col-md-offset-4 col-sm6-6 col-sm-offset-3">
-            <form action="/auth/login" class="form-inline form-login" role="form">
+            <form action="/auth/login" class="form-inline form-login" role="form" id="login_form">
               <div class="form-group">
-                <!-- <label class="sr-only" for="">로그인</label> -->
                 <div class="input-group">
                   <label for="login_id" class="fa fa-user"></label>
                   <input type="text" name="id" id="login_id" class="form-control transparent" placeholder="아이디">
@@ -58,6 +65,7 @@
                   <input type="password" name="password" id="login_password" class="form-control transparent" placeholder="비밀번호">
                 </div>
               </div>
+              
               <!-- <div id="div-button">
                 <button id="login" type="submit" class="btn btn-danger btn-fill">로그인</button>
               </div> -->
@@ -102,21 +110,16 @@
     <div class="modal-content">
       <div id="siba"></div>
 
-      <!-- header <-->
-      <!-- <div class="modal-header"> -->
-        <!-- 닫기(x) 버튼 -->
-          <!-- <button type="button" class="close" data-dismiss="modal">×</button> -->
-        <!-- header title -->
-        <!-- <h3 class="modal-title">계정 생성</h3> -->
-      <!-- </div> -->
-      <!-- body -->
       <div class="modal-body">
-        <form action="/auth/login" class="form-inline form-login" role="form">
+        <form action="/auth/regist" class="form-inline form-login" role="form" id="regist" method="POST">
           <div class="signup-inner">
             <label for="modal_id"></label>
-            <input type="email" name="id" id="modal_id" class="form-control transparent modal-input" placeholder="이메일">
+            <input type="text" name="id" id="modal_id" class="form-control transparent modal-input" placeholder="아이디">
           </div>
-          <!-- <br> -->
+          <div class="signup-inner">
+            <label for="modal_email"></label>
+            <input type="email" name="email" id="modal_email" class="form-control transparent modal-input" placeholder="이메일">
+          </div>
           <div class="signup-inner">
             <label for="login_password"></label>
             <input type="password" name="password" id="modal_password" class="form-control transparent modal-input" placeholder="비밀번호">
@@ -125,17 +128,17 @@
             <label for="modal_pwck"></label>
             <input type="password" name="passwordck" id="modal_pwck" class="form-control transparent modal-input" placeholder="비밀번호 확인">
           </div>
+          <div class="signup-inner">
+            <label for="modal_displayName"></label>
+            <input type="text" name="displayname" id="modal_displayName" class="form-control transparent modal-input" placeholder="닉네임">
+          </div>
+
           <div class="signup-inner" id="modal_sivbal">
             <label for="modal_submit"></label>
             <input type="submit" name="submit" id="modal_submit" class="form-control transparent modal-input" value="회원가입">
           </div>
         </form>
       </div>
-      <!-- Footer -->
-      <!-- <div class="modal-footer"> -->
-        <!-- Footer -->
-        <!-- <button type="button" class="btn btn-default" data-dismiss="modal">닫기</button> -->
-        <!-- </div> -->
     </div>
   </div>
 </div>
