--- a/views/fullcalendar.ejs
+++ b/views/fullcalendar.ejs
@@ -34,8 +34,8 @@
 	<link href='/css/modals.less' rel='stylesheet' type='text/css'>
 
 
-	<link rel="stylesheet" type="text/css" href="/css/day_calendar.css"/>
-	<link rel="stylesheet" type="text/css" href="/js/day_calendar.js"/>
+	<!--<link rel="stylesheet" type="text/css" href="/css/day_calendar.css"/>
+	<link rel="stylesheet" type="text/css" href="/js/day_calendar.js"/>-->
 
   <script type="text/javascript" src="js/nav.js"></script>
 
@@ -89,7 +89,7 @@
 								</div>
 								<div class="modal-body">
 									<p>
-										<label>Event title</label><br/>
+										<label>일정 이름</label><br/>
 										<input type = "text" id = "addTitle" class = "span10">
 									</p>
 
@@ -99,7 +99,7 @@
 									</p>-->
 								</div>
 								<div class="modal-footer">
-									<button type = "button" class="btn btn-primary" data-option="add" id="add">add</button>
+									<button type = "button" class="btn btn-primary" data-option="add" id="add">추가</button>
 									<!-- <button type = "button" class="btn btn-default" data-dismiss="modal">Close</button> -->
 								</div>
 							</div>
@@ -115,14 +115,14 @@
 								</div>
 								<div class="modal-body">
 									<p>
-										<label>Event title</label><br/>
+										<label>일정 이름</label><br/>
 										<input type = "text" id = "editTitle" class = "span10">
 									</p>
 								</div>
 								<div class="modal-footer">
-									<button type = "button" class = "btn btn-danger" data-option = "remove" id = "remove">remove</button>
-									<button type = "button" class = "btn btn-primary" data-option = "detail" id = "detail">detail</button>
-									<button type = "button" class = "btn btn-primary" data-option = "edit" id = "edit">edit</button>
+									<button type = "button" class = "btn btn-danger" data-option = "remove" id = "remove">삭제</button>
+									<button type = "button" class = "btn btn-primary" data-option = "detail" id = "detail">자세히</button>
+									<button type = "button" class = "btn btn-primary" data-option = "edit" id = "edit">수정</button>
 									<!-- <button type= " button" class = "btn btn-default" data-dismiss = "modal">Close</button> -->
 								</div>
 							</div>
@@ -146,7 +146,7 @@
 									</p>
 								</div>
 								<div class="modal-footer">
-									<button type = "button" class = "btn btn-primary" data-option = "edit" id = "editDetail">save</button>
+									<button type = "button" class = "btn btn-primary" data-option = "edit" id = "editDetail">저장</button>
 								</div>
 							</div>
 						</div>
