--- a/views/bucket_list.ejs
+++ b/views/bucket_list.ejs
@@ -45,8 +45,8 @@
       </header>
     <section>
 
-      <button type="button" id="delete" class="tableBtn">삭제</button>
-      <button type="button" id="editList" class="tableBtn">완료</button>
+      <!--<button type="button" id="delete" class="tableBtn">삭제</button>
+      <button type="button" id="editList" class="tableBtn">완료</button>-->
       <button type="button"id="addList" class="tableBtn">추가</button>
 
       <form action="/bucket" method="POST" class="bucketForm">
